[package]
name = "net"
version = "0.1.0"
authors = ["Paul <seehofer.paul@gmail.com>"]

[dependencies]
regex = ""
serde = ""
serde_json = ""
serde_derive = ""
hyper = ""
lazy_static = ""
time = ""
postgres = ""
postgres-derive = {git = "https://github.com/sfackler/rust-postgres-derive" }
postgres-derive-macros = ""